unify error responses to use ApiResponse